# ChangeLog for dev-python/django-pipeline
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/django-pipeline/ChangeLog,v 1.30 2015/03/08 23:45:06 pacho Exp $

  08 Mar 2015; Pacho Ramos <pacho@gentoo.org> django-pipeline-1.3.26.ebuild:
  x86 stable, bug 540290

  06 Mar 2015; Pacho Ramos <pacho@gentoo.org> django-pipeline-1.3.26.ebuild:
  amd64 stable, bug 540290

  03 Nov 2014; Ian Delaney <idella4@gentoo.org> +files/1.3.26-tests.patch,
  django-pipeline-1.3.26.ebuild:
  add patch, acquired from master since last release, fixes test failures

*django-pipeline-1.3.26 (03 Nov 2014)

  03 Nov 2014; Ian Delaney <idella4@gentoo.org> +django-pipeline-1.3.26.ebuild,
  -django-pipeline-1.3.17.ebuild, -django-pipeline-1.3.18.ebuild,
  -django-pipeline-1.3.23.ebuild, -django-pipeline-1.3.24.ebuild:
  bump; tidy deps, test failures filed and noted, rm some old

*django-pipeline-1.3.25 (02 Aug 2014)

  02 Aug 2014; Ian Delaney <idella4@gentoo.org> +django-pipeline-1.3.25.ebuild:
  bump

*django-pipeline-1.3.24 (22 Jul 2014)

  22 Jul 2014; Ian Delaney <idella4@gentoo.org> +django-pipeline-1.3.24.ebuild,
  django-pipeline-1.3.23.ebuild:
  bump

*django-pipeline-1.3.23 (14 Jun 2014)

  14 Jun 2014; Ian Delaney <idella4@gentoo.org> +django-pipeline-1.3.23.ebuild:
  bump; set Django dep to 1.6

*django-pipeline-1.3.18 (07 Jun 2014)

  07 Jun 2014; Ian Delaney <idella4@gentoo.org> +django-pipeline-1.3.18.ebuild,
  -django-pipeline-1.2.9.ebuild, -django-pipeline-1.3.15.ebuild,
  -django-pipeline-1.3.16.ebuild, django-pipeline-1.3.17.ebuild:
  bump; add pypy support

*django-pipeline-1.3.17 (03 May 2014)

  03 May 2014; Ian Delaney <idella4@gentoo.org> +django-pipeline-1.3.17.ebuild,
  django-pipeline-1.3.16.ebuild:
  bump; drop py2.6

*django-pipeline-1.3.16 (26 Apr 2014)

  26 Apr 2014; Ian Delaney <idella4@gentoo.org> +django-pipeline-1.3.16.ebuild,
  django-pipeline-1.2.9.ebuild:
  bump; add py3 support
