@@ -6,12 +6,12 @@ DIST django-pipeline-1.3.25.tar.gz 41008 SHA256 92c4ba5543d3ad980cd3a65a121ced62
 DIST django-pipeline-1.3.26.tar.gz 41054 SHA256 58433fc07cc81f213686b892caeb8d17d6ed4e00444ef95b35f21a5a3cc6357e SHA512 106c89e6a5509305548f6169f9b38d3a288bdf260c4b933ac1372c8471e897b8f6109cdecf70a4f77dff670e2b97abe4ed990903abfc188a59600189d0473284 WHIRLPOOL 7ead1f6dbc6df1a5c4b26869e6b4ae73cd416ed52f22ba1ff16b57a295f476c7973a56af9c05d1b50097e82dcd286207f648920b3acadd88fc40ad26aae10285
 EBUILD django-pipeline-1.3.25.ebuild 1512 SHA256 388327d235ebb0e18ca27f6cb4a6a9857d884c0b8ef615222670ec1519144a20 SHA512 0bb5b22c3d76f8d111c57fce86185c85e563a5f505ff83a0bdf9c1d1918921133908c32f4d6c0b30be55ec94f31d98457e9c6b200884c4581f091b7172a75f9a WHIRLPOOL c3f0304b0b4b766f3b9e72aad1146c424fb6d00a2e00fb8188543b8e8cfd56d864e3e839b249b10c5f43460aaf331da517e790de09079748d3111813842d0116
 EBUILD django-pipeline-1.3.26.ebuild 1614 SHA256 b36a89ba2b88d54e68d7bbf47225861cd34d66c30030ac7252a2228f14c1eb8a SHA512 f68e03115acc2e88859e5a8cfe74a3333f512ce8fef487683d65a66d7c7c82d48b03a2695df05e8f04588bcce97fea356662383939501efd64489e8dcecd25b7 WHIRLPOOL 658066bc9a440124ba595bfd797393d0e11b832032ed2a56d54b392d3035c090c53b28d47625c692f4faaf828b239d53156376c6d2a9605d2666c99e2c8ef120
-MISC ChangeLog 5110 SHA256 54f1f7619fcad9268f0c7776a7fcf626711bc6bac92334bac59300b244c797de SHA512 50321011468414700705e856ca30891163104b087fc5dfaf2a63e4c82da8c76da3a0adda87d9db4513f7cab8104941cef2a4eae38cdc8afdb38de25f10b5f066 WHIRLPOOL 29f06058e4f2c3d59e89ea5893dd59dc4790d51ddc02d91cc03c50267f98a8903ed5d57f22d1ac1a4eb653c2c532acf67a978c57e930309478eaaeb8dc82120d
-MISC metadata.xml 253 SHA256 e46efd590a64061ef839b703b4ea6f25ec8aa4b2e4da401c7ae00c74828de0c2 SHA512 8b47855847429a6f134541fe072f4b650f58e8ef0eb534e61c88442681429185b6ae3217512c69a427cf1309bad72fa7ab0d17bc62db76e4653081639224eac4 WHIRLPOOL 28eed9c27b29956e68cc70e1f74106f7e1b30a744c0cf045957cf80b5da93c05174f9a426ea7efef83ed07b7b3bdeb1c7139199e211837c5d4ec64870e0e7c69
+MISC ChangeLog 5203 SHA256 5d3491fa7ee8658d371214e5284a073f2c744bdcaac02588699c5fa733c1010c SHA512 ede2eec197fa44272fa447503a58bfdeb6929d61f5cfdfaa7ff66812eb708980a8dc97585b20f3d7909af75f2780c680fbdc6704e439e0af7e70d6f3caf44986 WHIRLPOOL d6ff9a6420fc89318d3b125d488c59d17fc445e6f7cee1dfa8e372ef460679b7d568e531acda3f393461aa14780c1a128ea8e29a3df811f7536f7e69f7cf0859
+MISC metadata.xml 161 SHA256 6f41e9b782499f6bac80760066dc5ebb307e73d31d2080f2eaa383b8a236c68e SHA512 9d77a0cf6ef95d95fe0e41852a1ddedc8bc4a82d39fa75e8bbf760ba835deebe6ac3beddc83b9b70e381cee31936f54bb2db7cb88357ed2228c9e972cf2cac47 WHIRLPOOL 1f1ee9aa1b4b8747fb5f6c9234263952071a1a90100df893eb7fed974ea7c63639796521cfa1fde8929fc2f1bf0cc65e88ef6d703a2dff633816ff87cbf21411
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlT83wAACgkQCaWpQKGI+9SvvQCdERq1Q4l7hJLn4qfg0aIn6TYT
-ul8An1PRHMAEGQ6NbSHxbolG0FW2XJuO
-=sg/0
+iEYEAREIAAYFAlUnjH8ACgkQso7CE7gHKw2GdACgubybagL0IzJKC4fDjP23fbT5
+K+kAn3xYUwgQIH0jDYimpdw5GeMDK5If
+=OPA1
 -----END PGP SIGNATURE-----
