@@ -5,27 +5,17 @@ AUX pymongo-2.5.1-greenlet.patch 673 SHA256 c3a0822fbb8892288bda09e0ab54a88d0d5d
 DIST pymongo-2.6.3.tar.gz 324241 SHA256 cabe1d785ad5db6ed8ff70dcb9c987958fc75400f066ec78911ca3f37184a4e2 SHA512 6da3cbf035b52379c24df37b76e1eb743b12c1026116e28e4e7b6450e2674d730f9c8c2dd85f352c6ee4c9f604decaffc2dbc57fe64268bd7522d8ce155cca9e WHIRLPOOL ac36dd88c4311237ecda66a6008fa0d89d0670e331df6c49a08a1d3bc4ddcafe72e8e003009c206d3ac12afb1b14afe2d3615834a5a8df5ce30442f7b49fdbf2
 DIST pymongo-2.7.2.tar.gz 381455 SHA256 8fb45e3edec006f4b11580fc579bec7781a8b3201ce0abf31593f086070e51f6 SHA512 0e78495462d670c168e716a7c34e05f6a11a203f0bf9b32c1488608343588a48cbbb76ce715411b310359de19d9cd57c75f80ac7d8195a122a760cec22e8d0c7 WHIRLPOOL 6cb7eedc530908c2fdb17b6e31561d9c860d6fd1edddb4d66288c3fe11bc199ebc58538a70508b2540b827077f62345a86729644fdf8d37c1b9934de03e77543
 DIST pymongo-2.8.tar.gz 394529 SHA256 0543f65364fb54fb54b954136cf6b5e689ab12a7c1d15c59c52d3d0c5fa73935 SHA512 5ff223d1652cb32c236b3e3de30308c17aa3de2fa558f639cc3212ec2cf46b2fffc69341ee5998fc75fe4981d3dd340a544503ab3dad3aeda53a07382b19779a WHIRLPOOL 28ef0b6cd80d19b88bc435d7c66202f4fa3fd72f5b3012f36bd21b0311bd7e5c49339803b3d88356fc1640cf32aaf4cc0d5c62daf811472edcaf62a59a152832
+DIST pymongo-3.0.tar.gz 375457 SHA256 1919bed7ad5d73940a6628b7420d326128dc68f3f67d4158abacff8b72a4eaa7 SHA512 9dd79fc6fa26837de9f5a262185a87923b7218d3ea08d9dea248a6ac60d5c203d6407ac25532886ee19a5128a1c7edf2d344a5d6e52e695eaf0c77190e40d6e5 WHIRLPOOL 8a8cb050c1802920c95e505078cac64159c16f026ffc86537a9bba4cbce95bf17dc325bd2f2519f69b8f9e3c6756ea917a6e6330a201b57cc628464a6cb24df2
 EBUILD pymongo-2.6.3.ebuild 3242 SHA256 c4bb3bb940b77dc2da8c2e2771d52494786fffbad4472623b3d44b85da332c2d SHA512 0f48f6f31dbb0c3168fb54fb1e335267c2616fd88273464bc140ac5c7fb4a025036dd77e53f7caf4729bd27f6bf480ade0cf5bffe4559f6295aacda7d33855bd WHIRLPOOL 7acfdb00ef36bd68d483ac734abd7227e7b66df0c997ce681fae7ad8440c42eefdca18fded3ad2c01eb277a38e9d8de4e232aac80e6c3178146fa12d0c777022
 EBUILD pymongo-2.7.2.ebuild 2967 SHA256 63293bf4864b3f11be6e2457c6c7df7ca222a1c696587e29ac616be31301cdfc SHA512 47d0f81c78a8ab99b2c9c2475146718524894f06f357e3f6c8c0dea6b18d2d47dc9371f3345d81736b5944ec527aed4cea196a7ac9e3a94442c826c344bcc24b WHIRLPOOL 68be6c5baed185cceaea8be8b27adb8a0dcaa11fa695006f75a0e1306b492592131762f5d750a113dfbebb80fc76e4eefd4f7783cfe64644f809311599fce15a
 EBUILD pymongo-2.8.ebuild 2967 SHA256 a4d0e129996a1e4f1311510b4febb473602442833e0ec2cbe3d03cb97c0716c7 SHA512 d9b6a88c301fbd641aecef623c31fe02e40fbe1ae62334b9302e1f9090f984c4c545edee08a9b108567f501e6083b3b056ca73038d364c74a7a2c8a7f005b2ab WHIRLPOOL 6b67c4eeeafb7fc347acec91511566582e18bfcd31da0fff443135ea796254cf0d83db7dc8d98c8c5d641663f5e34092e0c4a9c46a481221958641ca5b9f8f9d
-MISC ChangeLog 7113 SHA256 00dfdbe585efaf003668c8c7801ce46345c7ffed4d37808d36dca45040ad5482 SHA512 6b69d1d0a47f4a0f646383b0b31d20d185e0e2eafacc7cde2a2689f0702c95db84956f81f02b323e591465fe4eb5990b802b0e9eb0975a435f1f84fbeb622cb2 WHIRLPOOL f0cbc9f6694f9c0e0abd75ef4aed6d9947e71d8519cc34066c7c0bdcccf3127e0287128d9a32135cb79d35d0fb4817af26c58d876de2096baf668448b33beb99
+EBUILD pymongo-3.0.ebuild 2969 SHA256 1b02e06a6c9ddc3fd2203cde07a3b9713132644a499274d13c8fa9016e29a0e0 SHA512 5ce276c715e96cb6dda8bc19fc5ecca2660ae7bf943230cada01b6a05137b69e0c74618851968312e37f307f6d7464236f4da01d593a098d245cbf53b57722d0 WHIRLPOOL 767a96dea3d46d7f6cec1f64387c04f54e7be8e5781d6d705054bb7ebabcb28f7e4d498910194956c47fe0fbdf1cc75d373ec33132709dfed6d1ff7b0f86f81d
+MISC ChangeLog 7226 SHA256 f49ac881834d7dda8e3488176544c4e4485fc9ee2b7cfcd9bc9b94d3154c4b75 SHA512 92f22959fdd08173773ee81cccaefdce26b48a2ecd4beb2ccb95a1d2099b06e0699ec49472f94a964828114268808d83bbf0c3936010ce6a1aef28f61624ff8c WHIRLPOOL ce05c41d82747d05a9cf00792e57dac25df6e5c324f4096a8e1aa09dc99add6fbfc6122fc80a0c236815731965ba9813e8ca70950d29bf04f24b5295455c563a
 MISC metadata.xml 938 SHA256 727efde10e259e145e89f23269b52226b658ca5636f45997ab3450a623afe930 SHA512 8dba1e47b077267bda609ffd22b7526f7019c489722f7bfe32b47a24974756f531efa0258e65f2b45223cb7f1dc4d29489b5437c5d871cb0fa39de4c053377bb WHIRLPOOL c2bbf2195c841e2c0501801aa8c171fce707539dece8eba5e61e6edfdb5a5d5d11b1f7df54c7ff73493dcb3c821f52288d3aef8e6bdd9616a46218af5c25ca72
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJVJOKHXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZO2UIP/1rpTR86t4h6ZemyOhiYuwrP
-N7/Z5nDfRC0PgqKJjn5L1PdEanQZf7oAHiKrXGttpEpSFq7s003+lD8PTs5VrMQ4
-VmqjdhJ/0mNTDLDTLOwGWYcU1HjHEzvyyH4wxlns6a4DPoW1DsAUUCxj1FNRn4nw
-WeBBOzfBjEY9JLDCtEn2gFuF+iOZNVxVX7oFZpGoKrnO1Y8RjwRAxeJtOI+xXogG
-PdXRWra2QAo+Zt57NWrrBfu/QtsKgNMHYTOwsDjSO37Br9WVrcP6uNXaa/HwdJsj
-hQAM25dgX3RzpF7LcDIoVbgetmjPPC950quQ5hV4e150t4TkF0pJ8/T9vMNWMF1s
-HH4nRwPI6BUfaHCslBLIn+jn+BKuBx127aWHGRn7Dfs9SMIiZSVgwDlkpOwBwcX4
-QHvDlEY6wErZIdAXg2ZxIu5p7w9Ty+jwt4bbwhmrNZNS2nWsCorOQEyB66hK1xDv
-iEmEZRCn7cEYkmByFb82MIia1XdxEL7r9tofY6kNvUBYKBKsJebSEbM8K/t4j73W
-YpQCGGhYSzV4FKGpb+JG5B4ktyDdZ7bz09p5pdvGcTfd3GBz7Av4uyloWFlPPYlL
-jlcc1ln2q9hwfcQpaGo8w76hdJBVqOlFdFMmZnzrLjHUzeIsRnaceWZg4SMoMIAJ
-I1uzt2GutgLJgn0Kho0Z
-=mwPy
+iF4EAREIAAYFAlUnjbAACgkQKiQSS7ZY+hMibQEAlRa4RzDf9+cAiJZSNq+9WzBF
+95nkLBuZU3Ds2g+Oi0IA/j56SXHn1rFvr5sD9Gb67d+YIsLMvmAuelmKPM22oDrx
+=9Ksp
 -----END PGP SIGNATURE-----
