@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/django-pipeline
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/django-pipeline/ChangeLog,v 1.30 2015/03/08 23:45:06 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/django-pipeline/ChangeLog,v 1.31 2015/04/10 08:40:19 idella4 Exp $
+
+  10 Apr 2015; Ian Delaney <idella4@gentoo.org> metadata.xml:
+  rm self from metadata.xml
 
   08 Mar 2015; Pacho Ramos <pacho@gentoo.org> django-pipeline-1.3.26.ebuild:
   x86 stable, bug 540290
